cmake_minimum_required(VERSION 4.0)
project(cpp_uebung_ad)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp_uebung_ad
        main.cpp)
add_executable(01 uebung01/01.cpp)
add_executable(02 uebung01/02.cpp)
add_executable(03 uebung01/03.cpp)
add_executable(04a uebung01/04a.cpp)
add_executable(04b uebung01/04b.cpp)
add_executable(2.04 uebung02/2.04.cpp
        uebung02/2.01.cpp)
add_executable(2.01 uebung02/2.01.cpp)
